fixed our product overlapping issue

--- a/styles/products.css
+++ b/styles/products.css
@@ -55,7 +55,7 @@ color: #000000;
   }
   .hox {
     padding: 0% 10% 4% 10%;
-    height: 35rem;
+    height: 42rem;
   }
   
   /* .piv {
